--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,25 @@
 # Ortak ortam değişkenleri örneği
 API_URL=http://localhost:5000
 CLIENT_URL=http://localhost:3000
+
+
+Sunucu Portu
+PORT=5000
+
+# MongoDB Bağlantısı
+MONGO_URI=mongodb+srv://taskpronode_db_user:vlp4n3AqElMvxiAG@cluster0.stye8jd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+
+# JWT Ayarları
+JWT_SECRET=as9d8f7a6s5d4f3g2h1jklqwe123456
+JWT_EXPIRES=12h
+
+# Email SMTP Ayarları
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS= 
+EMAIL_FROM=
+
+# Frontend URL
+CLIENT_URL=http://localhost:3000
