--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,14 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
+    "@mui/x-date-pickers": "^8.12.0",
+    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-ellipsis-text": "^1.2.1",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
