--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^11.0.5",
     "yup": "^1.4.0"
