--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,12 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^7.3.2",
     "@mui/x-date-pickers": "^8.12.0",
-
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
-
     "dayjs": "^1.11.18",
     "lucide-react": "^0.454.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.0",
