--- a/client/package.json
+++ b/client/package.json
@@ -15,19 +15,22 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^7.3.2",
     "@mui/x-date-pickers": "^8.12.0",
-
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
-
     "dayjs": "^1.11.18",
+    "formik": "^2.4.6",
     "lucide-react": "^0.454.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.26.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5",
-    "yup": "^1.4.0"
+    "styled-components": "^6.1.19",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
