--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/TaskHive-TaskPro/TaskPro#readme",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
