--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
